--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,41 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     background-color: #f0f8ff;
-    background-image: url("https://www.transparenttextures.com/patterns/old-wall.png");
+    background-image: url("images/background_cacti.jpg");
+    background-size: 120px auto;
     background-repeat: repeat;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Lucida Console", Monaco, monospace;
     color: #000080;
-    margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
+
+    padding-top:15px;
+    padding-bottom: 15px;
     text-align: center;
-    color: red;
-    text-shadow: 1px 1px #ffffff;
+    background-color: lightgreen;
+    border-top: 4px groove hotpink;
+    border-bottom: 4px groove hotpink;
+    color: darkgreen;
+    text-shadow: 2px 2px #000000;
     font-size: 36px;
 }
 
 marquee {
-    background-color: yellow;
-    color: darkred;
+    background-color: lightblue;
+    color: royalblue;
     font-weight: bold;
     font-size: 18px;
     padding: 5px;
-    border-top: 2px dashed #000080;
-    border-bottom: 2px dashed #000080;
+    border-top: 2px dashed rebeccapurple;
+    border-bottom: 2px dashed rebeccapurple;
 }
 
 .nav {
@@ -54,7 +67,24 @@ marquee {
 .footer {
     text-align: center;
     font-size: small;
-    color: gray;
-    margin-top: 20px;
-    padding-bottom: 20px;
+    color: darkslategray;
+    margin-bottom: 10px;
+    margin-top: auto;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    background-color: lightpink;
+    border-top: 2px dotted darkmagenta;
+    border-bottom: 2px dotted darkmagenta;
+}
+
+.contact-icons img {
+    margin: 0 5px;
+    vertical-align: middle;
+    border: 4px double black;
+    background-color: floralwhite;
+    padding: 2px;
+}
+
+.hit-counter {
+    border-radius: 4px;
 }
